--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "studioName": "Combo Box",
     "category": "Custom Widgets",
     "iconPath": "/icons/widget-combobox.png",
-    "author": "4D SAS",
+    "author": "Wakanda SAS",
     "contributors": [
         "Yassine BOUKHATA",
         "Sébastien Lombard"
     ],
     "version": "1.0.0",
-    "copyright": "(c) 2014 4D SAS",
+    "copyright": "(c) 2015 Wakanda SAS",
     "repository": {
         "type": "git",
         "url": "https://github.com/Wakanda/ComboBox.git"
