--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "ComboBox",
+    "category": "Form Controls",
+    "type": "widget",
     "studioName": "Combo Box",
-    "category": "Custom Widgets",
     "iconPath": "/icons/widget-combobox.png",
     "author": "Wakanda SAS",
     "contributors": [
@@ -14,17 +15,20 @@
         "type": "git",
         "url": "https://github.com/Wakanda/ComboBox.git"
     },
-    "keywords": ["wakanda", "widget"],
-    "engines": {"wakanda": ">= 10"},
+    "keywords": ["wakanda", "widget", "combobox"],
+    "engines": {"wakanda": ">= 11"},
     "license": "MIT",
-    "studioPlatform": ["desktop"],
     "loadDependencies": [
-        {"id": "Widget_V2"},
-        {"id": "TextInput/package.json", "version": "1.0.0", "path": "WIDGETS_CUSTOM"},
-        {"id": "Button/package.json", "version": "1.0.0", "path": "WIDGETS_CUSTOM"},
-        {"id": "wListView/package.json", "version": "1.0.0", "path": "WIDGETS_CUSTOM"},
-        {"id": "ComboBox/widget.js", "version": "1.0.0", "path": "WIDGETS_CUSTOM"},
-        {"id": "ComboBox/css/widget.css", "version": "1.0.0", "path": "WIDGETS_CUSTOM"},
-        {"id": "ComboBox/designer.js", "studioOnly": true, "version": "1.0.0", "path": "WIDGETS_CUSTOM"}
+        {"package": "Button"},
+        {"package": "TextInput"},
+        {"package": "ListView"},
+        {"file": "widget.js"},
+        {"file": "css/widget.css"},
+        {"file": "designer.js", "studioOnly": true}
+    ],
+    "testDependencies": [
+        "../../unittest-jenkins/testHelper.js",
+        "tests/widget-spec.js",
+        "../../unittest-jenkins/testRunner.js"
     ]
 }
